# CrewAi_base_0

./: README.md  report.md
crewai_1/: README.md  pyproject.toml
crewai_1/src/crewai_1/: crew.py  main.py
crewai_2_educational_mathTutor/: README.md  pyproject.toml
crewai_2_educational_mathTutor/src/crewai_2_educational_mathTutor/: crew.py  main.py  math_ex.py
crewai_2_educational_mathTutor/src/crewai_2_educational_mathTutor/config/: agents.yaml  tasks.yaml
crewai_2_educational_mathTutor/src/crewai_2_educational_mathTutor/tools/: custom_tool.py  level1_math.py  math_ex.py  user_input_tool.py
